# django-ninja-crud-example

./: .gitignore  LICENSE  README.md  guide_post.md  manage.py  pyproject.toml
src/company_basic/: apps.py  auth.py  router.py
src/company_basic/api/: employee_api.py
src/company_basic/migrations/: 0001_initial.py
src/company_ninja_crud/: apps.py  auth.py  models.py  router.py
src/company_ninja_crud/api/: employee_api.py
src/company_ninja_crud/migrations/: 0001_initial.py
src/core/: settings.py  urls.py
src/seed/management/commands/: seed.py
